在載入頁面新增請求權限，完成部分相機功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/goCamera"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
