--- a/app/src/main/res/layout/activity_cars_log_detail.xml
+++ b/app/src/main/res/layout/activity_cars_log_detail.xml
@@ -101,11 +101,14 @@
         android:id="@+id/EditInfo"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/red_button"
         android:text="檢舉"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/law"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/law" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
