--- a/app/src/main/res/layout/activity_cars_log_detail.xml
+++ b/app/src/main/res/layout/activity_cars_log_detail.xml
@@ -7,6 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".CarsLogDetail">
 
+    <Button
+        android:id="@+id/DeleteInfo"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/green_background"
+        android:text="刪除"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EditInfo" />
+
     <TextView
         android:id="@+id/textViewabc"
         android:layout_width="wrap_content"
