--- a/app/src/main/res/layout/activity_email_register.xml
+++ b/app/src/main/res/layout/activity_email_register.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="賬號注冊"
+        android:text="賬號註冊"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#100F0F"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,7 +103,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/blue_button"
-        android:text="注冊"
+        android:text="註冊"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
