--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -183,7 +183,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:background="@drawable/blue_button"
-                android:text="前往注冊"
+                android:text="前往註冊"
                 android:textColor="@color/white" />
 
             <TextView
