--- a/app/src/main/res/layout/activity_violate_traffic_law.xml
+++ b/app/src/main/res/layout/activity_violate_traffic_law.xml
@@ -35,34 +35,62 @@
             <TextView
                 android:id="@+id/Law2"
                 android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:text="1.未依規定行駛車道。"
+                android:layout_height="match_parent"
+                android:text="一、45-1-4在多車道不依規定駕車。"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#100F0F" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:text="在多車道行駛時無視地上標線變換車道"
                 android:textColor="#100F0F" />
 
             <TextView
                 android:id="@+id/Law3"
                 android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:text="2.不依規定使用燈光。"
+                android:layout_height="match_parent"
+                android:text="二、42 汽車駕駛人，不依規定使用燈光者。"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#100F0F" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:text="變換車道時沒有打方向燈"
                 android:textColor="#100F0F" />
 
             <TextView
                 android:id="@+id/Law5"
                 android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:text="3.未依標誌、標線、號誌指示行車。"
+                android:layout_height="match_parent"
+                android:text="三、48-1-2未依標誌、標線、號誌指示。"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#100F0F" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:text="駕駛無視交通號號誌闖紅燈"
                 android:textColor="#100F0F" />
 
             <TextView
                 android:id="@+id/Law9"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="4.機車駕駛人或附載座人未依規定戴安全帽者。"
+                android:layout_height="match_parent"
+                android:text="四、31-6機車駕駛人或附載座人未依規定戴安全帽者。"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="#100F0F" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="機車駕駛或乘客沒有戴安全帽行駛"
+                android:textColor="#100F0F"/>
 
         </LinearLayout>
     </ScrollView>
